# moff-tarkin

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  settings.py
.claude/sessions/: data-extraction-init.txt
agents/: __init__.py  llm_calls.py  schemas.py
data/: complete_scenes.db  moff_tarkin.db
models/: scene.py
scrapers/: base_scraper.py  script_scrapers.py
storage/: database.py
utils/: antidetect.py  captcha_solver.py
