[project]
name = "moff-tarkin"
version = "0.1.0"
description = "Character scene extraction pipeline"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "undetected-chromedriver>=3.5.4",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "pyppeteer>=2.0.0",
    "cloudscraper>=1.2.71",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "fake-useragent>=1.5.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "twocaptcha>=0.0.1",
    "python-anticaptcha>=1.0.0",
    "tls-client>=0.2.2",
    "loguru>=0.7.2",
    "python-dateutil>=2.8.2",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]
